tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_55.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  y := (((+ (p MOD z)) - ((200 MOD 1) - (+ 1223))) DIV (((+ y) DIV (1223 - x)) * ((1223 * 200) DIV (- 200))));
               p := (((+ (+ 2)) # ((200 - 1) - (y * 1))) & (((- 0) DIV (0 + 2)) < ((200 * z) - (+ 1223))));
               q := ((((2 * 200) # (y DIV 1)) OR ((1223 DIV 200) <= (1223 MOD 0))) OR (((z MOD x) - (y DIV 200)) # ((0 - 2) MOD (1223 * x))));
               r := (((+ (0 MOD 2)) - ((2 DIV 1) + (1223 DIV 1223))) <= (((- 2) + (y * 1)) + (- (- z))));
               r := ((((1 + z) DIV (2 MOD 0)) * (+ (0 MOD 1223))) > ((- (1223 - x)) - ((y * z) MOD (x + z))));
               y := (+ (((1223 MOD x) MOD (y - 1)) MOD (- (+ x))));
               p := (~ ((- (1223 DIV 0)) = (- (2 - 0))));
               q := ((((z DIV 2) MOD (1223 - z)) * ((x MOD y) DIV (1 - 2))) < (- (+ (2 DIV 1))));
               y := (+ (((200 DIV 200) + (200 * y)) * (- (- z))));
               y := (+ (((+ 1) + (+ 1)) * (- (+ z))))
END Test11.